yaml_examples/deploymentpod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      env: staging
  template:
    metadata:
      labels:
        env: staging
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
