yaml_examples/podmanifest1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: testpod
spec:
  containers:
  - name: testcontainer
    image: ubuntu
    command: ['sh', '-c', 'echo Hello Kubernetes!! && sleep 60']
  restartPolicy: Never
