yaml_examples/servicetest.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: beta
  name: beta

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
      env: staging
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 80
