yaml_examples/ingress-multiservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multihost-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: apache.fran.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: apache-service
            port:
              number: 8000
  - host: tomcat.fran.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tomcat-service
            port:
              number: 8080
